--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
+    "firebase": "^11.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
